--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>d</title>
+  <title>Weather</title>
+<link rel="icon" type="image/x-icon" href="icons/des.png">
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Tangerine">
